--- a/style.css
+++ b/style.css
@@ -54,9 +54,68 @@ footer {
     font-weight: bold;
     padding: 1rem;
     border-radius: 10px;
+    cursor: pointer;
 }
 
-.add-book:hover {
+.add-book:hover,
+.remove:hover {
     background-color: var(--add-book-btn-bc);
-    cursor: pointer;
+}
+
+main {
+    padding: 2rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
+    gap: 1.5rem;
+    justify-items: center;
+    align-items: start;
+}
+
+.card {
+    border-radius: 10px;
+    padding: 2rem;
+    background-color: white;
+    min-height: 25rem;
+    width: 22rem;
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+    align-items: center;
+    gap: 1rem;
+}
+
+.card h5 {
+    font-size: 1.5rem;
+    font-weight: lighter;
+    text-align: center;
+}
+
+.card-buttons {
+    display: flex;
+    flex-direction: column;
+}
+
+.read,
+.not-read,
+.remove {
+    width: 100%;
+}
+
+.read {
+    background-color: rgb(69, 250, 109);
+}
+
+.read:hover {
+    background-color: rgb(4, 163, 38);
+}
+
+.not-read {
+    background-color: rgb(252, 80, 80);
+}
+
+.not-read:hover {
+    background-color: rgb(190, 4, 4);
+}
+
+.remove {
+    background-color: var(--main-background-color);
 }
